address, brands and categories service and controllers where refactored