@@ -3,6 +3,7 @@ package com.ilario.sparkmart.services.implementations;
 import com.ilario.sparkmart.dto.AddressDTO;
 import com.ilario.sparkmart.dto.UserDTO;
 import com.ilario.sparkmart.exceptions.addresses.AddressNotFoundException;
+import com.ilario.sparkmart.exceptions.addresses.AddressesNotFoundException;
 import com.ilario.sparkmart.mappers.AddressMapper;
 import com.ilario.sparkmart.mappers.UserMapper;
 import com.ilario.sparkmart.models.User;
@@ -14,6 +15,7 @@ import com.ilario.sparkmart.models.Address;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,43 +31,34 @@ public class AddressServiceImpl implements IAddressService {
 
     @Override
     public Address getLastSavedAddress() {
-        var addresses = addressRepository.findAll()
+        var lastAddress = addressRepository
+                .findAll()
                 .stream()
-                .sorted(Comparator.comparing(Address::getCreatedAt))
-                .toList();
-        return addresses.get(addresses.size() - 1);
+                .max(Comparator.comparing(Address::getCreatedAt));
+        return lastAddress.orElseThrow();
     }
 
     @Override
-    public Address getAddressByStreetNameAndCity(String streetName, String city) {
-        try {
-            var address = addressRepository.findAddressByStreetAddressAndCity(streetName, city);
-            if(address.isEmpty()) {
-                throw new AddressNotFoundException("ERROR: Address not found!");
-            } else {
-                return address.get();
-            }
-        } catch (AddressNotFoundException exception) {
-            System.out.println(exception.getMessage());
+    public Address getAddressByStreetNameAndCity(String streetName, String city) throws AddressNotFoundException {
+        var address = addressRepository.findAddressByStreetAddressAndCity(streetName, city);
+        if(address.isEmpty()) {
+            throw new AddressNotFoundException("ERROR: Address by given street and name not found.");
         }
-        return null;
+        return address.get();
     }
 
     @Override
     public Boolean addressExists(AddressDTO addressDTO) {
-        var existingAddress = addressRepository.findAddressByStreetAddressAndCity(addressDTO.streetAddress(), addressDTO.city());
-        return existingAddress.isPresent();
+        return addressRepository
+                .findAddressByStreetAddressAndCity(addressDTO.streetAddress(), addressDTO.city())
+                .isPresent();
     }
 
     @Override
-    public Page<UserDTO> getAllUsersByAddress(UUID id, Pageable pageable) {
-        var address = addressRepository.findById(id);
-        if(address.isEmpty()) {
-            return new PageImpl<>(new ArrayList<>(), pageable, 0);
-        }
-        var users = address
-                .get()
-                .getUsers()
+    public Page<UserDTO> getAllUsersByAddress(UUID id, Pageable pageable) throws AddressNotFoundException {
+        var address = addressRepository.findById(id)
+                .orElseThrow(() -> new AddressNotFoundException("ERROR: Address by given ID not found."));
+        var users = address.getUsers()
                 .stream()
                 .filter(User::isEnabled)
                 .map(userMapper::toUserDTO)
@@ -74,17 +67,12 @@ public class AddressServiceImpl implements IAddressService {
     }
 
     @Override
-    public AddressDTO getById(UUID uuid) {
+    public AddressDTO getById(UUID uuid) throws AddressNotFoundException {
         var address = addressRepository.findById(uuid);
-        try {
-            if(address.isEmpty()) {
-                throw new AddressNotFoundException("Address Not Found!");
-            }
-            return addressMapper.toAddressDTO(address.get());
-        } catch (AddressNotFoundException exception) {
-            System.out.println(exception.getMessage());
+        if(address.isEmpty()) {
+            throw new AddressNotFoundException("ERROR: Address by given id not found.");
         }
-        return null;
+        return addressMapper.toAddressDTO(address.get());
     }
 
     @Override
@@ -97,24 +85,23 @@ public class AddressServiceImpl implements IAddressService {
     }
 
     @Override
-    public Page<AddressDTO> getAll(int page, int pageSize, String sortBy, String sortDir, String keyword) {
-        Pageable pageable = PageRequest.of(
+    public Page<AddressDTO> getAll(int page, int pageSize, String sortBy, String sortDir, String keyword) throws AddressesNotFoundException {
+        var pageable = PageRequest.of(
                 page,
                 pageSize,
                 sortDir.equalsIgnoreCase("asc") ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending());
-        Page<Address> pageResult;
-        if(keyword.isEmpty()) {
-            pageResult = addressRepository.findAll(pageable);
-        }
-        else {
-            pageResult = addressRepository.findAllByKeyword(keyword.toLowerCase(), pageable);
+        var pageResult = keyword.isEmpty() ?
+                addressRepository.findAll(pageable) :
+                addressRepository.findAllByKeyword(keyword.toLowerCase(), pageable);
+        if(pageResult.isEmpty()) {
+            throw new AddressesNotFoundException("ERROR: Addresses not found.");
         }
         var addressDTOs = pageResult
                 .getContent()
                 .stream()
                 .filter(x -> !x.getStreetAddress().isEmpty())
                 .map(addressMapper::toAddressDTO)
-                .toList();
+                .collect(Collectors.toList());
         return new PageImpl<>(addressDTOs, pageable, pageResult.getTotalElements());
     }
 }
